projetos/local/nexus-msg/nexus-msg-webapp/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nexus-msg-webapp-deployment
spec:
  template:
    spec:
      containers:
      - name: nexus-msg-webapp-container
        image: nexus-msg-webapp:v0.1.0
        imagePullPolicy: IfNotPresent
