projetos/local/nexus-msg/nexus-msg-webapp/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: nexus-msg-webapp-route
  namespace: nexus-msg-webapp
spec:
  parentRefs:
  - name: nexus-gateway
    namespace: nginx-gateway
    sectionName: https
  hostnames:
  - msg.tech.nexusplatform.com.br
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: nexus-msg-webapp-service
      port: 80
